2004-12-27  Reiner Jung <r.jung at think-e.com.br>

        * eAccelerator 0.9.2 release.

2004-12-27  Everaldo Canuto <everaldo_canuto at yahoo.com.br>

        * encoder.c Increment encoder version.
        * encoder.php Fix name of standalone loader "eloader".
        * win32/* build files for VS6, Thanks to Lyle Arnot.
        * accelerator_version.h Release updated to 0.9.2.

2004-12-27  Shin Seung Woo <segv74 at gmail.com>

        * optimize.c Fix array -= += .= bug in PHP5.
        * Pretty disassembler's output.
        * Change FE_FETCH's opcode type from EXT_FETCH to EXT_FE (FE = foreach).

2004-12-25  Everaldo Canuto <everaldo_canuto at yahoo.com.br>

        * win32/* build files for Visual Studio, now works in Win32. Thanks 
        Lyle Arnot for provide this files.
        * eLoader added eLoader is a standalone loader for encode files.
        * eaccelerator.name_space config parameter added. Patch 1090379.
        * fix foreach error in PHP 4.3.10. Thanks to Ilkka Huotari.
        * encoder.php fix error message when eAccelerator are not loaded.

2004-12-24  Everaldo Canuto <everaldo_canuto at yahoo.com.br>

        * loader.c fixed constant COMPILE_DL_ELOADER. Thanks to Lyle A. 

2004-12-23  Everaldo Canuto <everaldo_canuto at yahoo.com.br>

        * COPYING license file fixed.
        * Fixed compilation errors under Win32 and old versions of gcc.

2004-12-22 ReinerJ <reinerj at users.sourceforge.net>

        * eaccelerator.ini for distrib which have /etc/php.d

2004-12-22 Franck34 <franck34 at users.sourceforge.net>

        * README file updated

2004-12-22  Everaldo Canuto <everaldo_canuto at yahoo.com.br>

        * Segmentation fault problems fixed.

2004-12-19  Everaldo Canuto <everaldo_canuto at yahoo.com.br>

        * Segv patchs for PHP5 applyed.
        * Some bug fixes to work on PHP4 and PHP5.

2004-12-09  Everaldo Canuto <everaldo_canuto at yahoo.com.br>

        * first public release 0.9.0 based on Turck MMCache.