@@ -191,6 +191,12 @@ ZEND_EXTERN_MODULE_GLOBALS(eaccelerator)
 #endif
 
 #define EACCELERATOR_EXTENSION_NAME "eAccelerator"
-#define EACCELERATOR_LOADER_EXTENSION_NAME "Turck Loader"
+#define EACCELERATOR_LOADER_EXTENSION_NAME "eLoader"
+
+#define MMC_ENCODER_VERSION   0x00000003
+#define MMC_ENCODER_END       0x00
+#define MMC_ENCODER_NAMESPACE 0x01
+#define MMC_ENCODER_CLASS     0x02
+#define MMC_ENCODER_FUNCTION  0x03
 
 #endif /*#ifndef INCLUDED_EACCELERATOR_H*/
